# openapi_generator

./: .gitignore  LICENSE  README.md  openapi_generator.py  requirements.txt  setup.cfg
src/openapi_generator/: __init__.py
src/openapi_generator/core/: apidoc.py  openapidoc.py  postmanapidoc.py
utils/: apidoc.py  common.py  openapidoc.py  postmanapidoc.py
