[metadata]
name = openapi_generator
version = 0.0.1
author = Albo90
description = Generate openAPI document from Postman collection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Albo90/openapi_generator
project_urls =
    Bug Tracker = https://github.com/Albo90/openapi_generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp == 3.8.1
    genson == 1.2.2
    PyYAML == 6.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    openapi_generator = openapi_generator:main